--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 internal-port: 1663
 external-port: 1665
-optionNameIngressURLingress-url: http://localhost:1633
+ingress-url: http://localhost:1633
